--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "name": "Node-Express-Angular-MySql-Todo",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "App demonstrating MySql DB connection and Querying",
-  "main": "server.js",
+  "main": "node server.js",
   "author": "Michael Cullen",
   "dependencies": {
-    "express": "4.1.2",
-    "mongoose": "3.8.9",
-    "morgan": "~1.0.1",
-    "body-parser": "~1.0.2",
-    "gulp-concat": "~2.2.0",
-    "gulp-minify-css": "~0.3.4",
-    "gulp": "~3.6.2",
-    "gulp-uglify": "~0.3.0",
-    "gulp-minify-html": "~0.1.3",
-    "gulp-filter": "~0.4.1",
-    "mysql": "~2.2.0",
-    "express-myconnection": "~1.0.4",
-    "path": "~0.4.9"
+    "body-parser": "^1.5.2",
+    "colors": "^0.6.2",
+    "express": "^4.7.2",
+    "express-myconnection": "^1.0.4",
+    "gulp": "^3.8.7",
+    "gulp-concat": "^2.3.4",
+    "gulp-filter": "^0.4.1",
+    "gulp-minify-css": "^0.3.7",
+    "gulp-minify-html": "^0.1.4",
+    "gulp-uglify": "^0.3.1",
+    "mongoose": "^3.9.0",
+    "mysql": "^2.4.1",
+    "path": "^0.4.9"
+  },
+  "devDependencies": {
+    "morgan": "~1.1.1"
   }
 }
